# rs-ex-1

./: Cargo.toml  README.md
src/: main.rs
src/fakeunzip/: creator.rs  interactor.rs  mod.rs
src/userinput/: mod.rs
