[package]
name = "strace-upgrade"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libc = "0.2.112"
which = "4.2.2"
sysinfo = "0.22.4"
# structopt = "0.3.25"
ctrlc = "3.2.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.48"
